# rust-test-webapp

./: .env  .gitignore  Cargo.toml  README.md
backend/: .env  Cargo.toml
backend/src/study/: errors.rs  routes.rs
backend/src/study/dbaccess/: study.rs
backend/src/study/dbscripts/: study.sql
backend/src/study/handlers/: general.rs  mod.rs  study.rs
backend/src/study/models/: study.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  app_router.rs  main.rs
frontend/src/components/: mod.rs  navbar_top.rs
frontend/src/pages/: home.rs
src/: errors.rs  main.rs  routes.rs
src/dbaccess/: mod.rs  study.rs
src/handlers/: general.rs  mod.rs  not_found.rs  study.rs
src/models/: study.rs
