[package]
name = "rust-test-webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-rt = "2.7.0"
dotenv = "0.15.0"
sqlx = {version = "0.6.2", default_features = false, features = ["postgres","runtime-tokio-rustls", "macros","chrono"]}
serde = { version = "1.0.145", features = ["derive"] }
openssl = { version = "0.10.42", features = ["vendored"] }
env_logger = "0.9.1"
log = "0.4.17"
