[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-rt = "2.7.0"

dotenv = "0.15.0"

sqlx = {version = "0.6.2", default_features = false, features = ["postgres","runtime-tokio-rustls", "macros","chrono"]}

# Data serialization library
serde = { version = "1.0.145", features = ["derive"] }

# Openssl for linux build
openssl = { version = "0.10.42", features = ["vendored"] }